# step-io

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml  coverage.toml
codegen/src/: check.rs  classify.rs  coverage.rs  emit.rs  entity_normalize.rs  lib.rs  main.rs  mapping.rs  merkle.rs  model_ir.rs  roundtrip.rs  schema.rs
gen-early/: Cargo.toml
gen-early/src/: classify.rs  emit.rs  expr.rs  main.rs  mapping.rs  profile.rs  schema.rs  testutil.rs
macros/tests/ui/: complex_missing_pass.rs  complex_missing_pass.stderr  complex_missing_required.stderr  complex_unknown_arg.rs  simple_missing_name.rs  simple_missing_name.stderr  simple_multi_segment_self.rs  simple_non_path_self.rs  simple_non_path_self.stderr
schema/: coverage.txt  mapping.toml
spike-codegen/: Cargo.toml
spike-codegen/src/: generated.rs  main.rs  merkle.rs  normalize.rs  readwrite.rs
src/: lib.rs
src/early/: bind.rs  graph.rs  lift.rs  lower.rs  mod.rs  model.rs  profile.rs  serialize.rs
src/early/lift/: assembly_product.rs  geometry.rs  mod.rs  plm.rs  pmi.rs  property.rs  shape_rep.rs  tessellation.rs  topology.rs  units.rs  visualization.rs
src/early/lower/: assembly_product.rs  geometry.rs  mod.rs  plm.rs  pmi.rs  property.rs  shape_rep.rs  tessellation.rs  topology.rs  units.rs  visualization.rs
src/entities/: mod.rs  pmi.rs  tessellation.rs
src/entities/assembly_product/: context_dependent_shape_representation.rs  design_context.rs  make_from_usage_option.rs  mechanical_context.rs  mod.rs  next_assembly_usage_occurrence.rs  product.rs  product_category.rs  product_category_relationship.rs  product_context.rs  product_definition.rs  product_definition_context.rs  product_definition_context_association.rs  product_definition_context_role.rs  product_definition_formation.rs  product_definition_formation_with_source.rs  product_definition_relationship.rs  product_definition_shape.rs  product_definition_with_associated_documents.rs  product_related_product_category.rs  shared.rs
src/entities/form_features/: mod.rs  step.rs
src/entities/geometry/: axis1_placement.rs  axis2_placement_2d.rs  axis2_placement_3d.rs  b_spline_curve_2d_with_knots.rs  b_spline_curve_with_knots.rs  b_spline_surface_with_knots.rs  bounded_pcurve.rs  cartesian_point.rs  cartesian_point_2d.rs  circle.rs  circle_2d.rs  circular_area.rs  composite_curve.rs  composite_curve_segment.rs  conical_surface.rs  curve_bounded_surface.rs  cylindrical_surface.rs  degenerate_toroidal_surface.rs  direction.rs  direction_2d.rs  ellipse.rs  ellipse_2d.rs  geometric_curve_set.rs  geometric_set.rs  hyperbola.rs  line.rs  line_2d.rs  mod.rs  nurbs_shared.rs  offset_curve_3d.rs  offset_surface.rs  parabola.rs  planar_extent.rs  plane.rs  polyline.rs  polyline_2d.rs  quasi_uniform_curve.rs  quasi_uniform_surface.rs  rational_bspline_curve.rs  rational_bspline_curve_2d.rs  (+16 more)
src/entities/plm/: address.rs  application_context.rs  application_protocol_definition.rs  applied_approval_assignment.rs  applied_date_and_time_assignment.rs  applied_document_reference.rs  applied_external_identification_assignment.rs  applied_group_assignment.rs  applied_identification_assignment.rs  applied_person_and_organization_assignment.rs  applied_security_classification_assignment.rs  approval.rs  approval_date_time.rs  approval_person_organization.rs  approval_role.rs  approval_status.rs  calendar_date.rs  cc_design_approval.rs  cc_design_date_and_time_assignment.rs  cc_design_person_and_organization_assignment.rs  cc_design_security_classification.rs  coordinated_universal_time_offset.rs  date_and_time.rs  date_time_role.rs  document.rs  document_file.rs  document_product_equivalence.rs  document_representation_type.rs  document_type.rs  external_source.rs  group.rs  identification_role.rs  local_time.rs  mod.rs  object_role.rs  organization.rs  person.rs  person_and_organization.rs  person_and_organization_role.rs  personal_address.rs  (+3 more)
src/entities/pmi/: mod.rs  shape_aspect.rs
src/entities/property/: description_attribute.rs  mod.rs  (+9 more)
src/ir/: arena.rs  assembly.rs  attr.rs  error.rs  form_features.rs  geometry.rs  id.rs  mod.rs  model.rs  plm.rs  pmi.rs  property.rs  representation_item.rs  select.rs  shape_aspect_ref.rs  shape_rep.rs  tessellation.rs  topology.rs  units.rs  visualization.rs
src/normalize/: entity_normalize.rs  mod.rs  projection.rs
src/parser/: entity.rs  lexer.rs  mod.rs  p21.rs  schema.rs
src/reader/: assembly.rs  dispatch.rs  geometry.rs  header.rs  id_map_cache.rs  mod.rs  nonstandard.rs  passes.rs  pmi.rs  property.rs  tests.rs  topology.rs  units.rs  visualization.rs
src/writer/: buffer.rs  entity.rs  header.rs  lexical.rs  loss.rs  mod.rs  project.rs  projection.rs  serialize.rs
step-io-macros/: Cargo.toml
step-io-macros/src/: lib.rs
step-io-macros/tests/ui/: complex_missing_name.rs  complex_missing_name.stderr  complex_missing_required.rs  complex_unknown_arg.stderr  simple_missing_pass.rs  simple_missing_pass.stderr  simple_multi_segment_self.stderr  simple_unknown_arg.rs  simple_unknown_arg.stderr
tests/: fallible_read.rs  gen_smoke.rs  golden_writer.rs  lexer_fixtures.rs  parser_fixtures.rs  parser_robustness.rs  reader_smoke.rs  schema_report.rs  writer_roundtrip.rs  writer_smoke.rs  writer_spike.rs  writer_target.rs
tests/fixtures/: assembly_ap214_is.step  box_ap203.step  box_ap214_cd.step  box_ap214_dis.step  box_ap214_is.step  box_ap242_dis.step  cone_ap214_is.step  cylinder_ap214_is.step  ellipse_ap214_is.step  external_temp_abc_explicit_de.step  external_temp_fusion360_two_context.stp  face_surface_ap214_is.step  fillet_box_ap214_is.step  hemisphere_tube_ap242_dis.stp  hollow_box_ap214_is.step  loft_ap214_is.step  offset_surface_ap214_is.step  revolution_ap214_is.step  tapered_box_ap214_is.step  torus_ap214_is.step  wire1_ap214_is.stp  wire2_ap214_is.step
(+135 files in other folders)
