[workspace]
members = [".", "macros", "gen-early", "spike-codegen", "codegen"]

[package]
name = "step-io"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "STEP (ISO 10303) file I/O for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/elgar328/step-io"
readme = "README.md"
keywords = ["step", "iso10303", "cad", "geometry", "parser"]
categories = ["parser-implementations", "science", "encoding"]
exclude = ["internal/"]

[dependencies]
linkme = "0.3"
logos = "0.16"
step-io-macros = { path = "./macros", version = "0.1.0" }

[features]
# 2-layer cutover (in progress): compile the codegen-generated schema-faithful
# model + read + write under `src/generated` and the read-side pipeline under
# `src/normalize` (public `normalize::{read, write}`). On by default; the old
# reader/writer still compile alongside until the cutover delete. Build with
# `--no-default-features` to drop the generated path (rollback). The codegen
# generator depends on step-io with default-features=false, so regenerating the
# generated code never requires the (possibly broken) generated path to compile.
default = ["gen"]
gen = []

[lints.rust]
# `deny` (not `forbid`) so linkme's #[distributed_slice] can opt in via
# #[allow(unsafe_code)] for the link_section attribute it generates. No
# step-io code itself uses `unsafe`.
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
