[workspace]
members = [".", "codegen"]

[package]
name = "step-io"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "STEP (ISO 10303) file I/O for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/elgar328/step-io"
readme = "README.md"
keywords = ["step", "iso10303", "cad", "geometry", "parser"]
categories = ["parser-implementations", "science", "encoding"]
exclude = ["internal/"]

[dependencies]
logos = "0.16"

[lints.rust]
# No step-io code uses `unsafe`.
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
