[package]
name = "gen-early"
version = "0.0.0"
edition = "2024"
publish = false
description = "Dev tool: generates src/early/generated/ (EarlyModel L1 model/bind/serialize) from schema/early.toml. Not part of the step-io library."

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
