[package]
name = "step-io-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Internal proc-macro helpers for step-io entity handlers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/elgar328/step-io"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
